<resources>
    <string name="app_name">iPetsTest</string>
    <string name="map_key" translatable="false">AIzaSyBiU7Qs7b5GjLBZ8kxHrJU-2VOmRXR6XpY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">camera</string>
    <string name="textview">hello</string>
    <string name="imageView" />
    <string name="button_pick">ok</string>
    <string name="button_remake">remake</string>
    <string name="show_result" />
    <string name="analysis">analysis</string>
    <string name="get_album">album</string>
    <string name="add">add</string>
    <string name="editemaill">editemail</string>
    <string name="phone">phone</string>
    <string name="editname">editnsme</string>
    <string name="email">email</string>
    <string name="tel">tel</string>
    <string name="name">name</string>
    <string name="sqlite">sqlite</string>
    <string name="SingIn">SingIn</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="account">account</string>
    <string name="password">password</string>
    <string name="SENT">sent</string>
    <string name="SignInSuccess">Sign In Success</string>
    <string name="AddData">AddData</string>
    <string name="gender">addgender</string>
    <string name="sent">sent</string>
    <string name="find">Find</string>
    <string name="search">搜尋</string>
    <string name="enter_address_city_or_zip_code">Enter Address,City or Zip Code</string>
    <string name="todo">TODO</string>

</resources>

